fix up pagination buttons on mobile, fix validation reset when submitting

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -48,3 +48,7 @@
 #logoutButton:hover {
     color: red;
 }
+
+/* .btn:hover {
+    border: 1px solid;
+} */
